# ZenJep

./: Cargo.toml  README.md  example.yaml  flake.nix  todo.org  zenjep-mode.el
src/: applicationstate.rs  lib.rs
src/flightlistgenerator/: aircraftnewversion.rs  airport.rs  extracttime.rs  flight.rs  flightlist.rs  flighttime.rs  mod.rs  utils.rs  validator.rs
src/pages/: aircrafts.rs  families.rs  filter.rs  home.rs  jeppesen.rs  mod.rs  years.rs
src/renderable/: aircrafts.rs  familiesandmodels.rs  filters.rs  home.rs  htmlerror.rs  logbook.rs  mod.rs  testtemplate.rs  years.rs
templates/: aircrafts.html  base.html  error_jeppesen.html  familiesandmodels.html  filters.html  index.html  jeppesen.html  testtemplate.html  years.html
